trailhead-custom-metadata-types/src/objects/Booking__c.object
<CustomObject>
    <fields>
        <fullName>Account_Booking__c</fullName>
        <label>アカウント</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Booking</relationshipLabel>
        <relationshipName>Booking</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Departure_c__c</fullName>
        <label>Departure__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vacation_Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vacation Package</label>
        <referenceTo>Vacation_Package__c</referenceTo>
        <relationshipLabel>Booking</relationshipLabel>
        <relationshipName>Booking</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Booking</label>
    <nameField>
        <label>Booking名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>